--- a/css/btnStyle.css
+++ b/css/btnStyle.css
@@ -28,7 +28,7 @@ a {
     height: 107px;
     margin: auto;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
@@ -44,7 +44,7 @@ a {
     margin: auto;
     margin-top: 30px;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
@@ -67,7 +67,7 @@ a {
     margin: auto;
     margin-right: 11px;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
@@ -84,7 +84,7 @@ a {
     margin: auto;
     margin-left: 10px;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
@@ -106,7 +106,7 @@ a {
     margin: auto;
     margin-right: 11px;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
@@ -122,7 +122,7 @@ a {
     margin: auto;
     margin-left: 10px;
 
-    background: var(--tg-theme-button-color);
+    background-color: var(--tg-theme-button-color, #50a8eb);
     color: var(--tg-theme-button-text-color);
     border-radius: 7px;
 }
