--- a/css/btnStyle.css
+++ b/css/btnStyle.css
@@ -3,7 +3,7 @@ body{
     padding-top: 40px;
     box-sizing: border-box;
     font-family: "Montserrat";
-    background-color: var(--tg-theme-bg-color);
+    background: var(--tg-theme-bg-color);
     color: var(--tg-theme-text-color);
     
 }
