--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    font-family: "Jost";
+    font-family: "Jos";
     color: var(--tg-theme-text-color);
     background-color: var(--tg-theme-secondary-bg-color);
 }
